Added updateSubscriber endpoint
